# demoqa-tests-automation-framework-example

./: .gitignore  pyproject.toml  requirements.txt
allure-results/: 044f4aac-f18a-4bad-95a0-e5e8fccd1c55-attachment.txt  1571e9f3-b546-4d1c-978c-7ffe9af7c4da-attachment.txt  17b810f8-b460-4088-a217-ef487be40d40-result.json  471dedd0-f589-4325-8535-7ed4a4607065-result.json  5f73bb23-d50b-4836-a12a-43fd97b96f7c-container.json  6388422b-7f8e-44a3-9e79-4210fb1abed4-container.json  6fb09eb3-7f40-40e8-870b-a011ec9e4c16-attachment.html  73840caf-1bbb-4ac5-8ec6-e86ec424d54b-container.json  75bd22ce-fcd7-446a-b1a7-f150eb78a298-attachment.html  8fac6b80-42fa-4056-bb88-c28c605491c0-attachment.txt  b06d2de9-a9a5-4c86-b2b4-23db02818888-result.json  bca01bbc-eb54-4033-b772-fd103b4e516a-attachment.html  d2011673-31e9-476d-aea2-7984e068b468-result.json  e23c8995-b412-4e30-a44a-9e0ce671db88-container.json  e5d43a99-b5cf-41f0-af01-2ca8bfcbdd70-attachment.txt  f38cad53-cf6d-4fe4-aa25-a63a29ce4c0a-attachment.html
demoqa_tests/: config.py
demoqa_tests/model/: app.py
demoqa_tests/model/controls/: checkbox.py  datepicker.py  dropdown.py  file_attribute.py  radio_button.py  tags_input.py
demoqa_tests/model/data/: user.py
demoqa_tests/model/pages/: practice_page.py  web_tables_page.py
demoqa_tests/utils/: __init__.py  browser_extensions.py  files.py
demoqa_tests/utils/selene/: action.py
demoqa_tests/utils/selene/conditions/: match.py
pages/: base_page.py  locators.py  locators_web_tables.py  practice_page.py
tests/: conftest.py  test_practice_form.py  test_web_tables.py
